--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -2,12 +2,12 @@ name: 'default'
 author: 'Xu wayen'
 output_path : 'DATE_TIME'
 seed: 1958
-play_steps: 2
+play_steps: 10
 
 # navigation config
 habitat_config_path: 'configs/habitat_default.yaml'
 
-max_moves: 100
+max_moves: 20
 success_distance: 1.0
 use_office_reward: True
 discount_rate: 0.98
@@ -17,20 +17,23 @@ preprocess_model: 'resnet34'
 
 # normal model-based learning 
 normal_mbase:
-  envnet_layer_num: [512,4,5,6,512]
-  policynet_layer_num: [512,5,5,6,3]
-  valuenet_layer_num: [512,6,7,8,1]
+  envnet_layer_num: [516,200,100,200,512]
+  policynet_layer_num: [512,200,100,200,3]
+  valuenet_layer_num: [512,250,100,50,1]
 
-  envnet_train_epochs: 50
-  policynet_train_epochs: 50
+  envnet_train_epochs: 10
+  policynet_train_epochs: 10
 
-  envnet_train_sample_num: 5
-  envnet_train_batchsize: 20
-  policynet_train_sample_num: 5
-  policy_train_batchsize: 20
+  envnet_train_sample_num: 10
+  envnet_train_batchsize: 30
+  policynet_train_sample_num: 10
+  policy_train_batchsize: 30
+
+  env_train_batchsize: 10
   
   envnet_train_lr: 0.1
   envnet_train_momentun: 0.9
+  env_train_epoches: 20
 
   policy_train_lr: 0.1
 
